# esp32proj

./: README.md  sdkconfig  sdkconfig.old
main/: detection_responder.h  esp_cli.c  main_functions.cc  model_settings.cc  model_settings.h  person_detect_model_data.cc
static_images/: CMakeLists.txt
static_images/sample_images/: A.raw  B.raw  C.raw  D.raw  E.raw  F.raw  G.raw  H.raw  I.raw  J.raw  K.raw  L.raw  M.raw  N.raw  O.raw  P.raw  Q.raw  R.raw  S.raw  T.raw  U.raw  V.raw  W.raw  X.raw  Y.raw  Z.raw  nothing.raw  space.raw
