idf_component_register(
    SRCS ""
    INCLUDE_DIRS ""
    EMBED_FILES 
        "sample_images/A.raw"
        "sample_images/B.raw"
        "sample_images/C.raw"
        "sample_images/D.raw"
        "sample_images/E.raw"
        "sample_images/F.raw"
        "sample_images/G.raw"
        "sample_images/H.raw"
        "sample_images/I.raw"
        "sample_images/J.raw"
        "sample_images/K.raw"
        "sample_images/L.raw"
        "sample_images/M.raw"
        "sample_images/N.raw"
        "sample_images/O.raw"
        "sample_images/P.raw"
        "sample_images/Q.raw"
        "sample_images/R.raw"
        "sample_images/S.raw"
        "sample_images/T.raw"
        "sample_images/U.raw"
        "sample_images/V.raw"
        "sample_images/W.raw"
        "sample_images/X.raw"
        "sample_images/Y.raw"
        "sample_images/Z.raw"
        "sample_images/nothing.raw"
        "sample_images/space.raw"
)
